test/expected/explain_o_new_z_z.out
explain std::size_t operator new( std::size_t )
        ^
9: error: invalid operator "new" return type "std::size_t" (aka, "unsigned long"); must be a pointer to void
